--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,4 +43,5 @@ Collate:
 biocViews: CopyNumberVariation, DNAMethylation, MethylationArray, Microarray,
     Normalization, Preprocessing, QualityControl, Software
 VignetteBuilder: knitr
+Encoding: UTF-8
 RoxygenNote: 7.2.0
