--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,15 @@ export(CNV.detailplot_wrap)
 export(CNV.fit)
 export(CNV.genomeplot)
 export(CNV.load)
+export(CNV.processsummary)
 export(CNV.segment)
+export(CNV.summaryplot)
 export(CNV.write)
 export(read.450k.url)
 exportClasses(CNV.analysis)
 exportClasses(CNV.anno)
 exportClasses(CNV.data)
+exportClasses(CNV.summaryanalysis)
 exportMethods("[")
 exportMethods("names<-")
 exportMethods(coef)
@@ -31,7 +34,3 @@ import(minfi)
 importFrom(methods,show)
 importFrom(rtracklayer,import)
 importFrom(stats,coef)
-importFrom(grDevices,colorRamp,rgb)
-importFrom(graphics,abline,axis,frame,lines,par,plot,text,title)
-importFrom(stats,lm,optim,predict)
-importFrom(utils,head,tail,write.table)
