--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ import(IlluminaHumanMethylation450kmanifest)
 import(IlluminaHumanMethylationEPICanno.ilm10b2.hg19)
 import(IlluminaHumanMethylationEPICmanifest)
 import(minfi)
+importFrom(gtools,mixedorder)
 importFrom(methods,show)
 importFrom(rtracklayer,import)
 importFrom(stats,coef)
